--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  persistent_bottom_nav_bar: ^5.0.2
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
