--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  convex_bottom_bar: ^3.1.0+1
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  
   persistent_bottom_nav_bar: ^5.0.2
   shared_preferences: ^2.0.15
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -48,10 +42,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -66,7 +61,7 @@ flutter:
     - assets/images/logo2.png
     - assets/images/logo3.png
     - assets/images/gambar.png
-    - assets/images/shoes.png 
+    - assets/images/shoes.png
     - assets/grid/1.png
     - assets/grid/2.png
     - assets/grid/3.png
@@ -74,13 +69,10 @@ flutter:
     - assets/grid/5.png
     - assets/grid/6.png
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
